Fixed images to show up aligned. Background and image borders added. Jumbotron display relevant information.

--- a/memory-game/src/App.css
+++ b/memory-game/src/App.css
@@ -1,33 +1,26 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.img-container {
+  margin-left: 200px;
+  margin-right: 100px;
+}
+ .img-table {
+  display: inline-table;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+img {
+  height: 250px;
+  width: 250px;
+  margin: 15px;
+  border-radius: 25px;
+  border: 2px white solid;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.wrapper {
+  background: url('/images/titanbackground.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
 }
